# reptimeline

./: .gitignore  .zenodo.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-examples.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: migration-from-triadic.md
examples/: causal_experiments.py  causal_v2.py  mnist_binary_ae.py  mnist_extractor.py  mnist_pipeline.py  null_baseline_demo.py  pythia_concepts.json  pythia_sae_pipeline.py  run_null_models.py  sae_extractor.py  semantic_analysis.py  triadic_causal.py  triadic_extractor.py
paper/: reptimeline.aux  reptimeline.out  reptimeline.tex
reptimeline/: __init__.py  autolabel.py  causal.py  cli.py  core.py  discovery.py  exceptions.py  reconcile.py  stats.py  tracker.py
reptimeline/extractors/: __init__.py  base.py  fsq.py  sae.py  vqvae.py
reptimeline/overlays/: __init__.py  primitive_overlay.py
reptimeline/viz/: __init__.py  causal_heatmap.py  churn_heatmap.py  interactive.py  layer_emergence.py  phase_dashboard.py  swimlane.py
results/: null_model_results.json
results/causal/: causal_report.json  causal_v2_report.json
results/mnist_bae/: discovery.json  primitives.json  snapshots.json  timeline.json
results/mnist_bae/checkpoints/: model_step0.pt  model_step10.pt  model_step2.pt  model_step4.pt  model_step6.pt  model_step8.pt
results/pythia_sae/: discovery.json  feature_selection.json  primitives.json  semantic_report.json  snapshots.json  timeline.json
results/triadic_causal/: triadic_causal_report.json
tests/: conftest.py  test_autolabel.py  test_causal.py  test_causal_heatmap.py  test_cli.py  test_discovery.py  test_edge_cases.py  test_export.py  test_extractors.py  test_fsq_extractor.py  test_integration.py  test_interactive.py  test_primitive_overlay.py  test_reconcile.py  test_sae_extractor.py  test_smoke.py  test_stats.py  test_viz.py  test_vqvae_extractor.py
