[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reptimeline"
version = "0.1.0"
description = "Track how discrete representations evolve during training"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.10"
authors = [
    {name = "J. Arturo Ornelas Brand", email = "arturoornelas62@gmail.com"},
]
keywords = [
    "representation-learning",
    "discrete-representations",
    "interpretability",
    "vq-vae",
    "sparse-autoencoder",
    "lifecycle-tracking",
    "phase-transitions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.60",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
plotly = ["plotly>=5.0"]
docs = ["pdoc>=14.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["reptimeline[torch,plotly,dev,docs]"]

[project.scripts]
reptimeline = "reptimeline.cli:main"

[project.urls]
Homepage = "https://github.com/arturoornelasb/reptimeline"
Repository = "https://github.com/arturoornelasb/reptimeline"
Issues = "https://github.com/arturoornelasb/reptimeline/issues"

[tool.setuptools.packages.find]
include = ["reptimeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["reptimeline"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
